# spark-universe

./: .env  Cargo.toml  README.md
future-letters/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
future-letters/src/: App.css  App.tsx
future-letters/src/components/: CardGrid.js  Letter.css  Letter.js  LetterGrid.js  MsgCard.css  MsgCard.js
spark-explorer/: README.md  package-lock.json  package.json  tailwind.config.js  vue.config.js
spark-explorer/public/fonts/: optimer_regular.typeface.json
spark-explorer/src/: App.vue  main.js
spark-explorer/src/components/: CosmicScene.vue
spark-explorer/src/services/: api.js
sparkus-web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
sparkus-web/src/: App.tsx
sparkus-web/src/components/: CardGrid.tsx  MsgCard.css  MsgCard.tsx
sparkus-web/src/components/magicui/: marquee.tsx
src/: config.rs  db.rs  jwt.rs  main.rs  main.rs.bak  spark.rs  user.rs
