[package]
name = "SparkGarden"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.0"
chrono = "0.4"
bcrypt = "0.11"
dotenv = "0.15"
jsonwebtoken = "8.1"
uuid = { version = "1.1", features = ["v4"] }
bson = "2.11.0"
futures = "0.3.30"
lazy_static = "1.5.0"
actix-cors = "0.7.0"
